--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-sidebar-ui": "^1.3.3",
     "reactjs-navbar": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
