--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@mui/lab": "^5.0.0-alpha.119",
     "@mui/material": "^5.11.9",
+    "@rainbow-me/rainbowkit": "^0.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "classnames": "^2.3.2",
+    "daisyui": "^2.51.3",
     "erc-20-abi": "^1.0.0",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
@@ -24,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-sidebar-ui": "^1.3.3",
     "reactjs-navbar": "^1.0.2",
+    "wagmi": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
