--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "daisyui": "^2.51.3",
     "erc-20-abi": "^1.0.0",
     "ethers": "^5.7.2",
+    "jotai": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
