--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.3",
@@ -26,17 +27,18 @@
     "react-minimal-side-navigation": "^1.9.2",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1",
     "react-sidebar-ui": "^1.3.3",
     "reactjs-navbar": "^1.0.2",
+    "vite": "^4.2.1",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "wagmi": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +59,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
